{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 1154,
  "lineage": "728689b5-041f-1b08-cb54-7caba8562ad5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jdm-bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bf97847fcd5c9f57",
            "arn": "arn:aws:ec2:ap-southeast-1:108126910446:instance/i-02fad9c35beec7259",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02fad9c35beec7259",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "jr-dev-mm",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e964272c92e3f2b4",
            "private_dns": "ip-192-168-1-117.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.117",
            "public_dns": "ec2-18-139-0-149.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.139.0.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05c9efa3b09392fbb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0762dc3967042ec3a",
            "tags": {
              "Name": "jdm-bastion-host"
            },
            "tags_all": {
              "Name": "jdm-bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-063cb549a43052367"
            ]
          },
          "dependencies": [
            "aws_security_group.jdm-public-sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jdm-private-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:108126910446:security-group/sg-018b8570f0257b026",
            "description": "Allow Only from Public Subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018b8570f0257b026",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-063cb549a43052367"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jdm-private-sg",
            "name_prefix": "",
            "owner_id": "108126910446",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jdm-private-sg"
            },
            "tags_all": {
              "Name": "jdm-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0447228aef2fe99fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jdm-public-sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jdm-public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:108126910446:security-group/sg-063cb549a43052367",
            "description": "Allow SSH Connection from Outside",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063cb549a43052367",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jdm-public-sg",
            "name_prefix": "",
            "owner_id": "108126910446",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jdm-public-sg"
            },
            "tags_all": {
              "Name": "jdm-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0447228aef2fe99fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:108126910446:route-table/rtb-099ce8eea3f66b663",
            "default_route_table_id": "rtb-099ce8eea3f66b663",
            "id": "rtb-099ce8eea3f66b663",
            "owner_id": "108126910446",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Enviroment": "prod",
              "Name": "JrDevMM-default",
              "terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "JrDevMM-default",
              "terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0447228aef2fe99fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:108126910446:internet-gateway/igw-02a8c90aace38c776",
            "id": "igw-02a8c90aace38c776",
            "owner_id": "108126910446",
            "tags": {
              "Enviroment": "prod",
              "Name": "JrDevMM",
              "terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "JrDevMM",
              "terraform": "true"
            },
            "vpc_id": "vpc-0447228aef2fe99fb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02a8c90aace38c776",
            "id": "r-rtb-0b842aa8c386238ce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b842aa8c386238ce",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:108126910446:route-table/rtb-010df756cb146ab3b",
            "id": "rtb-010df756cb146ab3b",
            "owner_id": "108126910446",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Enviroment": "prod",
              "Name": "JrDevMM-private-ap-southeast-1a",
              "terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "JrDevMM-private-ap-southeast-1a",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0447228aef2fe99fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:108126910446:route-table/rtb-0b842aa8c386238ce",
            "id": "rtb-0b842aa8c386238ce",
            "owner_id": "108126910446",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Enviroment": "prod",
              "Name": "JrDevMM-public",
              "terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "JrDevMM-public",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0447228aef2fe99fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f94c457919864e3c",
            "route_table_id": "rtb-010df756cb146ab3b",
            "subnet_id": "subnet-08343706e03045db2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0801e95082980878b",
            "route_table_id": "rtb-010df756cb146ab3b",
            "subnet_id": "subnet-00d148e07ed7414cf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdf0e1776d44a4cd",
            "route_table_id": "rtb-0b842aa8c386238ce",
            "subnet_id": "subnet-0762dc3967042ec3a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:108126910446:subnet/subnet-08343706e03045db2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08343706e03045db2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "108126910446",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviroment": "prod",
              "Name": "JrDevMM-private-ap-southeast-1a",
              "terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "JrDevMM-private-ap-southeast-1a",
              "terraform": "true"
            },
            "vpc_id": "vpc-0447228aef2fe99fb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:108126910446:subnet/subnet-00d148e07ed7414cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d148e07ed7414cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "108126910446",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviroment": "prod",
              "Name": "JrDevMM-private-ap-southeast-1b",
              "terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "JrDevMM-private-ap-southeast-1b",
              "terraform": "true"
            },
            "vpc_id": "vpc-0447228aef2fe99fb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:108126910446:subnet/subnet-0762dc3967042ec3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0762dc3967042ec3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "108126910446",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviroment": "prod",
              "Name": "JrDevMM-public-ap-southeast-1a",
              "terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "JrDevMM-public-ap-southeast-1a",
              "terraform": "true"
            },
            "vpc_id": "vpc-0447228aef2fe99fb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:108126910446:vpc/vpc-0447228aef2fe99fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-057885d51aa18bdcd",
            "default_route_table_id": "rtb-099ce8eea3f66b663",
            "default_security_group_id": "sg-0693f8732de8c3da1",
            "dhcp_options_id": "dopt-6d43580a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0447228aef2fe99fb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-099ce8eea3f66b663",
            "owner_id": "108126910446",
            "tags": {
              "Enviroment": "prod",
              "Name": "JrDevMM",
              "terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "JrDevMM",
              "terraform": "true"
            }
          }
        }
      ]
    }
  ]
}